# bevy-jam

./: Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  wasm-launcher-5f36379ceae52263.js
.github/workflows/: build.yml  release-gh-pages.yml  release-native.yml  release.yml  test.yml
assets/shaders/: collider.wgsl  health.wgsl
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml
launchers/wasm/src/: main.rs
src/: animation.rs  audio.rs  collision.rs  combat.rs  easing.rs  enemy_logic.rs  game.rs  health.rs  interaction.rs  lerp.rs  lib.rs  particles.rs  ui.rs  worker_logic.rs
src/collision/: debug_colliders.rs  primitives.rs
src/health/: hp_material.rs
