[package]
name = "my-game"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

[features]
default = []
debug_colliders = ["debug_gui"]
debug_gui = ["dep:bevy-inspector-egui"]

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.8.0"
bevy-inspector-egui = { version = "0.12.1", optional = true }
image = "0.24.3"
tracing = "0.1.36"
winit = "0.26.1"
rand = "0.8.4"
ezing = "0.2.1"
