[package]
name = "my-game"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

[features]
default = []
debug_colliders = ["debug_gui"]
debug_gui = ["dep:bevy-inspector-egui"]

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy-inspector-egui = { version = "0.12.1", optional = true }
image = "0.24.3"
tracing = "0.1.36"
winit = "0.27.2"
rand = "0.8.5"
ezing = "0.2.1"
bevy_kira_audio = { version = "0.12.0", features = ["mp3"] }

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher",
]


# Work around a flickering issue in Chrome on Mac
[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }
